# Gaveta

./: .gitignore  CMakeLists.txt  License  README.md  ToDo.md
.github/workflows/: cmake-multi-platform.yml
assets/: btree.conf  btree.json  default_btree.json
assets/configs/: default_btree.conf  default_btree.json  list.txt
assets/public/: btree-20.idx
backlog/: config.yml
backlog/tasks/: task-1 - refactor-pages,-btree_node-and-integrate-them-with-generic-data-types.md  task-2 - [future]-plan-transaction-and-how-to-create-schemas.md
docs/: some_tips.md
public/: btree-20.idx  btree-5.idx  btree-9.idx
src/: App.c  App.h  defines.h
src/modules/BTree/: BTree.h
src/modules/b-tree/: b-tree-buf.c  b-tree-buf.h  b-tree.c  b_tree.h  free-rrn-list.c  free-rrn-list.h  io-buf.c  io-buf.h
src/modules/btree/: btree.c  btree.h
src/modules/config/: config.c  config.h
src/modules/ds/: BTree.c  BTree.h  GenericDynamicArray.c  GenericDynamicArray.h  GenericLinkedList.c  GenericLinkedList.h  GenericQueue.c  GenericQueue.h  HashTable.c  HashTable.h  ds_utils.c  ds_utils.h  generic_queue.c  generic_queue.h
src/modules/log/: log.c  log.h
src/modules/memory/: mem.c  mem.h
src/modules/schema/: schema.c  schema.h
src/modules/utils/: generic_queue.c  generic_queue.h  queue.c  queue.h  utils.c  utils.h
test/: test.c  test.h  test_btree.c  test_btree.h  test_generic_list.c  test_generic_list.h  test_generic_queue.c  test_generic_queue.h  test_hash_table.c  test_hash_table.h  test_mem.c  test_mem.h
